--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ground Guide | Mapping Intelligence for Hidden Infrastructure</title>
+    <title>Sub Vysion | Mapping Intelligence for Hidden Infrastructure</title>
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
   </head>
   <body>
